# cp9

./: .env.local  .gitignore  CLAUDE.md  GOOGLE_OAUTH_SETUP.example.md  NEXT_STEPS.md  README.md  api-integration.skill  gemini.md  package-lock.json  package.json  seo_blog_template.md  skills-lock.json
.agents/: STATUS.md
.claude/: settings.local.json
backend/: .mcp.json  .swaggerignore  CLAUDE.md  README.md  package-lock.json  package.json
backend-python/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  dev.bat  docker-compose.yml  pyproject.toml  test_coupang.json
backend-python/.claude/: settings.local.json
backend-python/.devcontainer/: README.md  devcontainer.json
backend-python/alembic/: env.py
backend-python/app/: __init__.py  main.py
backend-python/app/api/: __init__.py
backend-python/app/api/v1/: __init__.py  router.py
backend-python/app/api/v1/controllers/: __init__.py  product_research_controller.py  research_controller.py
backend-python/app/api/v1/endpoints/: __init__.py  health.py  product_research.py  research.py  websocket.py
backend-python/app/api/v1/handlers/: __init__.py  error_handler.py  request_validator.py  response_formatter.py
backend-python/app/core/: __init__.py  circuit_breaker.py  config.py  constants.py  context.py  error_handlers.py  error_messages.py  exceptions.py  logging.py  rate_limiting.py  redis_pubsub.py  seo_exceptions.py  websocket_manager.py
backend-python/app/core/exceptions/: __init__.py  domain_exceptions.py  exception_handler.py  http_exception_mapper.py
backend-python/app/domain/: __init__.py  entities.py  product_entities.py  usecases.py
backend-python/app/infra/: __init__.py
backend-python/app/infra/db/: __init__.py  models.py  repositories.py  session.py
backend-python/app/infra/llm/: __init__.py  perplexity.py  perplexity_api_client.py  perplexity_query_builder.py  perplexity_research.py  perplexity_research_coordinator.py  perplexity_response_parser.py
backend-python/app/infra/tasks/: __init__.py  celery_app.py  websocket_tasks.py  workers.py
backend-python/app/schemas/: __init__.py  error_responses.py  product_research_in.py  product_research_out.py  research_in.py  research_list_out.py  research_out.py
backend-python/app/services/: __init__.py  product_research_executor.py  product_research_job_manager.py  product_research_orchestrator.py  product_research_result_processor.py  product_research_service.py  research_service.py
backend-python/app/services/research_components/: __init__.py  executor.py  job_manager.py  result_processor.py
backend-python/app/tests/: test_api_handlers.py  test_error_handling.py  test_exception_system.py  test_executor.py  test_job_manager.py  test_perplexity_components.py  test_product_research.py  test_research.py  test_result_processor.py
backend-python/app/utils/: __init__.py  backoff.py  hashing.py  timezone.py
backend-python/docs/: API_REFERENCE_KR.md  FRONTEND_INTEGRATION_KR.md  README.md  REQUEST_TRACKING_SYSTEM.md  SHARED_ERROR_HANDLING_GUIDE.md
backend-python/docs/api/health/: README.md
backend-python/docs/api/product-research/: README.md  endpoints.md  schemas.md
backend-python/docs/development/: setup.md  testing.md
backend-python/docs/frontend/: API_INTEGRATION_GUIDE.md  API_INTEGRATION_ISSUES.md  ERROR_MESSAGE_IMPROVEMENT.md
backend-python/docs/troubleshooting/: common-issues.md  database-info.md  performance.md
backend-python/scripts/: __init__.py  docker_runner.py  runner.py
backend-spring-boot/: API_DOCUMENTATION.md  CLAUDE.md  DDD_LEARNING_GUIDE.md  FILE_STRUCTURE_GUIDE.md  HANDS_ON_TUTORIAL.md  build.gradle  settings.gradle
docs/: SaaS_AWS_백엔드_아키텍처_설계서.md  SaaS_전환_구체화_로드맵.md  article-generation-phase-plan.md  autopilot-persona-customization-plan.md  aws_migration_report.md  coupang_partners_reports_api.md  lightsail_migration_roadmap.md  seo_pipeline_architecture.md  ui-unification-report.md  데스크톱_AWS_백엔드_아키텍처_설계서.md  배포_전략_수립_가이드_SaaS_vs_데스크톱.md
frontend/: .gitignore  (+68 more)
(+878 files in other folders)
